markdown-pages/zh/tidb/release-3.0/sql-statements/sql-statement-commit.md
---
title: COMMIT
summary: TiDB 数据库中 COMMIT 的使用概况。
aliases: ['/docs-cn/v3.0/sql-statements/sql-statement-commit/','/docs-cn/v3.0/reference/sql/statements/commit/']
---

# COMMIT

`COMMIT` 语句用于在 TiDB 服务器内部提交事务。

在不使用 `BEGIN` 或 `START TRANSACTION` 语句的情况下，TiDB 中每一个查询语句本身也会默认作为事务处理，自动提交，确保了与 MySQL 的兼容。

## 语法图

**CommitStmt:**

![CommitStmt](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/CommitStmt.png)

## 示例


```sql
CREATE TABLE t1 (a int NOT NULL PRIMARY KEY);
```

```
Query OK, 0 rows affected (0.12 sec)
```


```sql
START TRANSACTION;
```

```
Query OK, 0 rows affected (0.00 sec)
```


```sql
INSERT INTO t1 VALUES (1);
```

```
Query OK, 1 row affected (0.00 sec)
```


```sql
COMMIT;
```

```
Query OK, 0 rows affected (0.01 sec)
```

## MySQL 兼容性

* TiDB 3.0.8 及更新版本默认使用[悲观事务模型](/pessimistic-transaction.md)。在[乐观事务模型](/optimistic-transaction.md)下，需要考虑到修改的行被另一个事务修改因此可能导致 `COMMIT` 语句执行失败的情况。
* 启用乐观事务模型后，`UNIQUE` 和 `PRIMARY KEY` 约束检查将延迟直至语句提交。当 `COMMIT` 语句失败时，这可能导致其他问题。可通过设置 `tidb_constraint_check_in_place=TRUE` 来改变该行为。

## 另请参阅

* [START TRANSACTION](/sql-statements/sql-statement-start-transaction.md)
* [ROLLBACK](/sql-statements/sql-statement-rollback.md)
* [BEGIN](/sql-statements/sql-statement-begin.md)
* [事务的惰性检查](/transaction-overview.md#惰性检查)
